<resources>
    <string name="app_name">FestiplAndroid</string>

    <string name="listeFestivalTitreActivite">Liste des festivals</string>
    <string name="listeFestivalLabelCategorie">Catégorie :</string>
    <string name="listeFestivalLabelDate">Date de déroulement :</string>
    <string name="listeFestivalLabelDescription">Description :</string>
    <string name="listeFestivalLabelVille">Ville :</string>
    <string name="listeFestivalLabelCodeP">Code Postal :</string>
    <string name="listeFestivalLibelleBtnFavori">Mes favoris</string>

    <string name="name_page">Connexion</string>

    <string name="label_id">Identifiant : </string>
    <string name="label_mdp">Mot de passe : </string>

    <string name="label_btn_se_connecter">Se connecter</string>

    <string name="label_btn_mdp_oublie">Mot de passe oublié ?</string>
    <string name="label_btn_id_oublie">Identifiant oublié ?</string>
    
    <string name="err_id_mdp_incorrect">Identifiant ou mot de passe incorrect</string>

    <string name="message_toast_pas_non_trouvee">Page non accessible</string>

    <string name="detailsFestivalTitreActivite">Information du festival</string>
    <string name="festivalLibelleListeSpectacles">Liste des spectacles :</string>
    <string name="festivalLibelleListeScenes">Scenes :</string>
    <string name="festivalLibelleResponsable">Responsable :</string>
    <string name="festivalLibelleOrganisateurs">Organisateurs :</string>

    <string name="erreurAPI">"connexion API impossible"</string>
    <string name="erreurJSON">"problème traitement données"</string>

    <string name="btnRetour">Retour</string>
</resources>