<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:stretchColumns="0,1">

    <TableRow>
        <LinearLayout
            android:orientation="vertical">
            <TextView
                android:id="@+id/titreFestival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nom Festival"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/labelCategorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listeFestivalLabelCategorie"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/categorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Musique Dance"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/labelDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listeFestivalLabelDate"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Du 02/02/02 au 02/03/02"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listeFestivalLabelDescription"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Festival de musique à Albi"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageFestival"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/labelleVille"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listeFestivalLabelVille"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ville"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Albi"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/labelCodePostal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listeFestivalLabelCodeP"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/codePostal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="81000"
                android:textColor="@color/white"/>

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="52dp"
                android:layout_height="51dp"
                android:layout_gravity="right"
                android:background="@color/transparent"
                app:srcCompat="@android:drawable/btn_star_big_off"/>
        </LinearLayout>
    </TableRow>
</TableLayout>